# room-ml

./: .dockerignore  .gitignore  Dockerfile  README.md  check_model.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_full_output.py
clean/: cleaned_ห้องประชุม_2557.xlsx  cleaned_ห้องประชุม_2558.xlsx  cleaned_ห้องประชุม_2559.xlsx  cleaned_ห้องประชุม_2560_1.xlsx  cleaned_ห้องประชุม_2560_2.xlsx  cleaned_ห้องประชุม_2561.xlsx  cleaned_ห้องประชุม_2562.xlsx  cleaned_ห้องประชุม_2568.xlsx
code/: train_room_model.py
code/models/: room_classifier.joblib
code/service/: app.py
config/: meeting-rooms.json  room-mapping.json
data/: cleaned_all_rooms.xlsx  cleaned_ห้องประชุม_2560_3.xlsx  cleaned_ห้องประชุม_2564.xlsx  cleaned_ห้องประชุม_2567.xlsx
laravel-integration/: .env.example  composer.json  swagger-annotations.php
laravel-integration/app/Http/Controllers/: RoomRecommendationController.php
laravel-integration/app/Services/: RoomPredictionService.php
laravel-integration/routes/: api.php
notebooks/: 01_data_preparation.ipynb  02_model_training.ipynb  README.md
src/: __init__.py
src/data_preparation/: __init__.py  prepare_data.py
src/models/: __init__.py  train_models.py
